Fixed content size, added videos and updates assets page.
Removed hover on logos.

--- a/Pages/Assets.cshtml
+++ b/Pages/Assets.cshtml
@@ -19,7 +19,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             Match3 - Game Template
-            <img class="popup" src="~/Images/match3.png" alt="Match 3 different levels" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/match3.png" alt="Match 3 different levels" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -31,8 +31,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/match.png" alt="Match 3" title="Match3 level 2 and random level" style="border-radius: 5%; max-width: 350px;">
-                <img class="popup" src="~/Images/match3.png" alt="Match3 Different Levels" style="border-radius: 5%; max-height: 500px;">
+                <iframe width="430" height="315" src="https://www.youtube.com/embed/odzdt9vhSw0" style="border-radius: 10% 10% 10% 10%;" title="Match 3 Game Template" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -69,7 +68,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             As a personal project, I made a small Match 3 colors game using an external art package.
             <br />
             <br />
@@ -85,8 +84,11 @@
             <br />
             <br />
             <br />
+            <br />
+            <br />
+            <br />
             You can find the Asset Store page here:
-        </h2>
+        </div>
         <a href="https://assetstore.unity.com/packages/templates/packs/match-3-colors-game-template-222007" target="_blank">
             <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store - Match 3 Game Template" title="assetstore.unity.com/">
             assetstore.unity.com/packages/templates/packs/match-3-colors-game-template-222007
@@ -101,7 +103,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             Lockpicking Minigame Template
-            <img class="popup" src="~/Images/lockpicking.png" alt="Lockpicking Minigame Template" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/lockpicking.png" alt="Lockpicking Minigame Template" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -113,8 +115,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/lock.png" alt="Lockpicking Minigame" title="Lockpicking Minigame" style="border-radius: 5%; max-width: 350px;">
-                <img class="popup" src="~/Images/lockpicking.png" alt="Lockpicking Different Difficulties" style="border-radius: 5%; max-height: 500px;">
+                <iframe width="430" height="315" src="https://www.youtube.com/embed/ibikxf0E1tQ" style="border-radius: 10% 10% 10% 10%;" title="Lockpicking Game Template" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </h1>
             <br />
             <br />
@@ -141,34 +142,33 @@
                 <img src="~/Images/BW/github.png" alt="Github" title="github.com">
                 <p class="alt">Github</p>
             </a>
-            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
-                <p class="alt">Audacity</p>
-            </a>
             <a href="https://assetstore.unity.com/packages/templates/packs/match-3-colors-game-template-222007" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store" title="assetstore.unity.com/">
                 <p class="alt">Unity Asset Store</p>
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
-            As a personal project, I made a small Match 3 colors game using an external art package.
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
+            As another personal project, I made a small semi-realistic lockingpicking minigame.
             <br />
             <br />
-            My main goal was to use only 1 packagee dependency to build an entire game that can be easily added to any project.
+            My main goal was to create a lockpicking game that could be somewhat realistic and that could be added easily into other projects.
             <br />
             <br />
-            There are 5 different scenes, 3 pre-created levels, 1 level randomizer and 1 level creator.
+            There are 3 different difficulties and includes a door as an example.
             <br />
             <br />
-            My main challenge in this project was using one source of art and being able to create cross shaped grids.
+            This package will be updated in the future.
+            <br />
+            <br />
+            <br />
             <br />
             <br />
             <br />
             <br />
             <br />
             You can find the Asset Store page here:
-        </h2>
+        </div>
         <a href="https://assetstore.unity.com/packages/templates/systems/lockpicking-minigame-221217" target="_blank">
             <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store - Lockpicking Minigame" title="assetstore.unity.com/">
             assetstore.unity.com/packages/templates/systems/lockpicking-minigame-221217
@@ -183,7 +183,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             WebGL Multiplayer Rooms Template
-            <img class="popup" src="~/Images/lockpicking.png" alt="WebGL Multiplayer Rooms Template" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/multiplayer2.png" alt="WebGL Multiplayer Rooms Template" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -195,14 +195,13 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/lock.png" alt="Lockpicking Minigame" title="Lockpicking Minigame" style="border-radius: 5%; max-width: 350px;">
-                <img class="popup" src="~/Images/lockpicking.png" alt="Multiplayer Rooms Examples" style="border-radius: 5%; max-height: 500px;">
+                <img src="~/Images/multiplayer.png" alt="Multiplayer Template" title="Multiplayer Template" style="border-radius: 5%; max-width: 350px;">
             </h1>
             <br />
             <br />
             <span>Itch.io page</span>
             <br />
-            <a href="https://danielboldrin.itch.io/lockpicking-minigame-template" target="_blank">danielboldrin.itch.io/lockpicking-minigame-template</a>
+            <a href="https://danielboldrin.itch.io/unity-multiplayer-rooms-template" target="_blank">danielboldrin.itch.io/unity-multiplayer-rooms-template</a>
             <br />
             <br />
             <span>Technologies Used</span>
@@ -219,13 +218,13 @@
                 <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
                 <p class="alt">Visual Studio</p>
             </a>
+            <a href="https://heroku.com" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/heroku.png" alt="Heroku" title="heroku.com">
+                <p class="alt">Heroku</p>
+            </a>
             <a href="https://github.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/github.png" alt="Github" title="github.com">
                 <p class="alt">Github</p>
-            </a>
-            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
-                <p class="alt">Audacity</p>
             </a>
             <a href="https://assetstore.unity.com/packages/templates/packs/match-3-colors-game-template-222007" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store" title="assetstore.unity.com/">
@@ -233,7 +232,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             As a personal project, I made a small WebGL Multiplayer Rooms Template Package for Unity.
             <br />
             <br />
@@ -255,16 +254,20 @@
             <a href="~/Documents/WebGLMultiplayerRoomsTemplate_EXTRA_CONTENT.zip" target="_blank">Extra Content.zip</a>
             <br />
             <br />
-            You can find the Asset Store page here:
-        </h2>
-        <a href="https://assetstore.unity.com/packages/templates/systems/lockpicking-minigame-221217" target="_blank">
-            <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store - Lockpicking Minigame" title="assetstore.unity.com/">
-            assetstore.unity.com/packages/templates/systems/lockpicking-minigame-221217
-        </a>
+            <br />
+            <br />
+            <br />
+            The asset store link will be published once the asset is accepted.
+            <br />
+            Meanwhile, you can download the extra content and explore the server and client javascript code.
+        </div>
     </div>
     <br />
 </header>
+<br />
+<iframe width="115%;" height="330" src="https://www.youtube.com/embed/IQaT0FSzTeI" style="margin-left:-110px; border-radius: 2% 2% 2% 2%;" title="WebGL Multiplayer Template" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
+
 <style>
     .intro__tagline {
         text-align: left !important;
@@ -279,12 +282,12 @@
         padding: 0px !important;
     }
 
-        .scrollable:hover {
-            width: 100%;
-            height: 90vh;
-            overflow-y: auto;
-            padding-left: 16.8px !important;
-        }
+    .scrollable:hover {
+        width: 100%;
+        height: 90vh;
+        overflow-y: auto;
+        padding-left: 16.8px !important;
+    }
 
     .menu-assets {
         background-color: #b0c4de;
@@ -308,9 +311,9 @@
         box-shadow: inset 0 -3px 0 #bae67e
     }
 
-        .intro__contact .highlight-link:hover {
-            -webkit-box-shadow: inset 0 -33px 0 0 #719f32;
-            box-shadow: inset 0 -33px 0 0 #719f32;
-            color: #fff
-        }
+    .intro__contact .highlight-link:hover {
+        -webkit-box-shadow: inset 0 -33px 0 0 #719f32;
+        box-shadow: inset 0 -33px 0 0 #719f32;
+        color: #fff
+    }
 </style>
