--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -19,7 +19,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             Game Programming - Advanced Diploma
-            <img class="popup" src="~/Images/gbcdiploma.png" alt="Daniel Boldrin Game Programming Diploma" title="Daniel Boldrin Game Programming Diploma" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/gbcdiploma.png" alt="Daniel Boldrin Game Programming Diploma" title="Daniel Boldrin Game Programming Diploma" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -32,7 +32,6 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/georgebrown.png" alt="George Brown College Logo" title="George Brown College Logo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
-                <img class="popup" src="~/Images/gbcdiploma.png" alt="Daniel Boldrin Game Programming Diploma" title="Daniel Boldrin Game Programming Diploma" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
@@ -107,7 +106,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Graduated with honours.
             <br />
             Studied computer languages such as C++, C#, and Python.
@@ -117,7 +116,7 @@
             Studied game engines such as Unity3D and Unreal Engine.
             <br />
             Studied 3D animation, modeling, 2D drawing, and arts.
-        </h2>
+        </div>
     </div>
     <br />
 </header>
@@ -128,7 +127,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             System Analysis and Development - Diploma
-            <img class="popup" src="~/Images/ifspdiploma.png" alt="Daniel System Analysis and Development Diploma" title="Daniel System Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/ifspdiploma.png" alt="Daniel System Analysis and Development Diploma" title="Daniel System Analysis and Development Diploma" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -141,7 +140,6 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/ifsp.png" alt="Federal Institute of São Paulo Logo" title="Federal Institute of São Paulo Logo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
-                <img class="popup" src="~/Images/ifspdiploma.png" alt="Daniel System Analysis and Development Diploma" title="Daniel System Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
@@ -224,7 +222,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Studied computer languages such as C, C++, C#, Java, Lua and Python.
             <br />
             Studied networking, security, operational systems, and database management.
@@ -234,7 +232,7 @@
             Completed an undergraduate research in `Web Accessibility`
             <br />
             Taught C# and XNA Game Programming classes for grade 12 students.
-        </h2>
+        </div>
     </div>
     <br />
 </header>
@@ -245,7 +243,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Web Accessibility - Undergraduate Research
-            <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" title="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" title="Undergraduate Research Certification" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -258,13 +256,12 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/ifsp.png" alt="Federal Institute of São Paulo Logo" title="Federal Institute of São Paulo Logo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
-                <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" title="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
             <span class="pop-wrap">
                 Avaré, SP - Brazil
-                <img class="popup" src="~/Images/avare.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+                <img class="popup" src="~/Images/avare.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 450px;">
                 <br />
                 Presented in November 2012
             </span>
@@ -272,7 +269,7 @@
             <br />
             <span class="pop-wrap">
                 Araraquara, SP - Brazil
-                <img class="popup" src="~/Images/araraquara.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+                <img class="popup" src="~/Images/araraquara.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 450px;">
                 <br />
                 Presented in October 2012
             </span>
@@ -280,19 +277,19 @@
             <br />
             <span class="pop-wrap">
                 Florianópolis, SC - Brazil
-                <img class="popup" src="~/Images/florianopolis.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+                <img class="popup" src="~/Images/florianopolis.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 450px;">
                 <br />
                 Presented in May and June 2012
             </span>
         </div>
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Researched human-computer interaction, different disabilities, and how they impact users` experience with websites.
             <br />
             Researched W3C system affordance best practices and standards.
             <br />
             As a result, I created a specialized survey to assure the quality and the accessibility of websites for users with different disabilities, with an emphasis on governmental systems.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -302,7 +299,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Biz Game Development - Presenter
-            <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" title="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" title="Biz Games Certification" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -314,14 +311,13 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/moura.png" alt="JN Moura Logo" title="JN Moura Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
-                <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" title="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <span>Araraquara, SP - Brazil</span>
             <br />
             <span>Presented in November 2013</span>
         </div>
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Volunteered to be one of the Business and Game Development presenter at SESC Araraquara.
             <br />
             Created and presented 3 mini-games made with C# and XNA:
@@ -332,8 +328,8 @@
             A simple guitar hero remake.
             <br />
             A top-down arcade game inspired on space invaders.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -343,7 +339,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Standards of Business Conduct - Certification
-            <img class="popup" src="~/Images/HPCERT.png" alt="SBC - HP Certification" title="SBC - HP Certification" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/HPCERT.png" alt="SBC - HP Certification" title="SBC - HP Certification" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -355,7 +351,6 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/hp.png" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
-                <img class="popup" src="~/Images/HPCERT.png" alt="SBC - HP Certification" title="SBC - HP Certification" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
@@ -387,12 +382,12 @@
             <br />
             <span>Volunteered in August 2018</span>
         </div>
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Volunteered to be the secret agent acting role during the ball.
             <br />
             Responsible for guests' interactiveness with the main game played during the night.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 
