--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -90,14 +90,14 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Developed 3 different immersive VR software modules to train and assess medical personnel in diverse healthcare simulations, from microbiology lab to cardiac and respiratory emergency procedures.
             <br />
             Experience with OpenXR, WaveXR, Oculus and Vive Focus 3
             <br />
             <br />
-        </h2>
-    </div>
+        </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -156,7 +156,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Responsible for planning, organizing, and teaching <span class="name">
                 game programming
             </span> remote classes with
@@ -167,8 +167,8 @@
             Recognized for teaching and course coordination excellence.
             <br />
             <br />
-        </h2>
-    </div>
+        </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -272,7 +272,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Planned, organized, and taught
             <span class="name">programming, 3D animation, modeling, circuits, technical drawing, and game design </span>
             presential and remote classes.
@@ -282,8 +282,8 @@
             Recognized for excellent teaching, corse coordination, and instructional reports to student’s parents.
             <br />
             <br />
-        </h2>
-    </div>
+        </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -375,7 +375,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Led a development team responsible for back and front-end programming of an automated medical survey system used over EUA.
             <br />
             Responsible for database management and software architecture using MVC5.
@@ -383,8 +383,8 @@
             Survey collected feedback via 30 online questions to be answered by patients after their visit to a clinic.
             <br />
             <br />
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -464,11 +464,11 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Worked in a contingency team responsible for managing, monitoring, testing, and sustaining all 5 main systems fully functional.
             Experience with database jobs, bank applications, web pages, automatic emailing, and interactive voice response.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -545,12 +545,12 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Worked in a development team responsible for back and front-end programming of a governmental tax exemption application for flood victims in Brazil.
             <br />
             Responsible for designing and implementing the tax exemption calculation API using C# MVC5, HTML5, CSS3, Javascript, and jQuery.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -668,7 +668,7 @@
             <br />
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Led a small team in various internal projects for the company, improving the quality of the calls answered by the telecom operators and overall work quality of employees.
             <br />
             Released applications that were used by 3000+ employees.
@@ -676,8 +676,8 @@
             Developed databases and servers with several automatic routines.
             <br />
             Experience with WAMP, LAMP, C# MVC, Aheeva, Active Directory, SQL, IIS.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -778,14 +778,14 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Being the first point of contact for database improvements and management.
             <br />
             Implemented and fixed features in marketing and business software using WAMP.
             <br />
             Focused on performance improvement.
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -875,7 +875,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Responsible for planning, organizing, and teaching
             <span class="name">game programming</span> and <span class="name">web development</span>
             remote classes with
@@ -886,8 +886,8 @@
             Recognized for teaching and course coordination excellence.
             <br />
             <br />
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
@@ -937,14 +937,14 @@
                 <p class="alt">Windows</p>
             </a>
         </div>
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             Responsible for teaching game programming classes with
             <span class="name">Visual Basic</span>, <span class="name">Alice2</span>, and <span class="name">Scratch</span>.
             <br />
             Taught class sizes of 6 students from grade 4 to 10.
             <br />
-        </h2>
-    </div>
+            </div>
+        </div>
     <br />
 </header>
 
