--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,20 +15,14 @@
 
 <header class="intro">
     <div class="intro__wrap">
-        <br />
-        <br />
+        <div style="height: 5vh"></div>
         <h1 class="intro__hello" style="font-size: 38px !important;">Hello!</h1>
-        <br />
-        <br />
-        <br />
+        <div style="height: 5vh"></div>
         <div class="company">
-            <br />
-            <br />
-            <br />
-            <br />
+            <div style="height: 15vh"></div>
             <img id="Avatar" class="intro__icon avatar__wave" src="~/Images/avatar.jpg" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 25% 50% 50% 25%; text-align:center;" onclick="wave()">
             <div style="clear:both; width: 100%;"></div>
-            <br />
+            <div style="height: 5vh"></div>
             <h2>Resume</h2>
             <div style="clear:both; width: 100%;"></div>
             <a href="~/Documents/Daniel_Boldrin_CV.docx" target="_blank" class="alt-wrap">
@@ -42,7 +36,7 @@
             I'm <span class="name">Daniel Boldrin</span>, a passionate professional System Analyst and Game Programmer who loves to design and develop games and applications.
         </h2>
     </div>
-        <h3 class="intro__contact" style="text-align: center; overflow:hidden;">
+        <h3 class="intro__contact" style="text-align: left; overflow:hidden;">
             <p class="animated">
                 <span>
                     Want to get in touch? You can reach me at <a href="mailto:daniel_cboldrin@hotmail.com" target="_blank" class="highlight-link">daniel_cboldrin@hotmail.com<img class="intro__icon" src="~/Images/BW/email-t.png" alt="Daniel Corbi Boldrin Avatar" style="border-radius: 50%; width:25px; height:25px; margin-left: 10px;"></a>
