--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -19,7 +19,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             Colorise - Game Jam Submission
-            <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -33,7 +33,6 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/colorise.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
-                <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
@@ -67,7 +66,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             As a personal Game Jam project, I created the game ColoRise, a colorful medium-fast paced game where your objective is to reach the top of the tower.
             <br />
             <br />
@@ -87,7 +86,7 @@
             <br />
             <br />
             This prototype was created in 2 days and right now I am fixing bugs and planning to create a finished version shortly. You can see the updates at the Itch.io game page.
-        </h2>
+        </div>
     </div>
     <br />
 </header>
@@ -98,7 +97,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             QBert - Arcade Game Remake
-            <img class="popup" src="~/Images/qbertc2.png" alt="QBERT Different Levels" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/qbertc2.png" alt="QBERT Different Levels" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -111,7 +110,6 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert Menu and Level 1" style="border-radius: 5%; max-width: 350px;">
-                <img class="popup" src="~/Images/qbertc2.png" alt="QBERT Different Levels" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
@@ -144,7 +142,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             As a personal project, I made a small version of the Arcade game: Qbert, in Unity3D.
             <br />
             <br />
@@ -164,7 +162,7 @@
             <br />
             <br />
             Also, to make sure the objects stay perfectly aligned, they are recentered after colliding with the ground.
-        </h2>
+        </div>
     </div>
     <br />
 </header>
@@ -175,7 +173,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             NailDown - College Project
-            <img class="popup" src="~/Images/naildownc2.png" alt="naildown screenshots 2" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/naildownc2.png" alt="naildown screenshots 2" style="border-radius: 5%; max-height: 450px;">
         </h1>
         <br />
         <br />
@@ -188,7 +186,6 @@
             <br />
             <h1 class="intro__hello pop-wrap">
                 <img src="~/Images/naildownc1.png" alt="NailDown screenshots 1" title="NailDown screenshots 1" style="border-radius: 5%; max-width: 350px;">
-                <img class="popup" src="~/Images/naildownc2.png" alt="naildown screenshots 2" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
             <br />
@@ -226,7 +223,7 @@
             </a>
         </div>
 
-        <h2 class="intro__tagline" style="text-align: center;">
+        <div class="intro__tagline" style="text-align: center !important; padding: 40px 40px 0px 5px; font-size: 19px !important;">
             As a college project, I created the game Nail Down, a puzzle-combat platformer where your objective is to escape the zombie outbreak.
             <br />
             <br />
@@ -237,7 +234,7 @@
             <br />
             <br />
             This project had to be done in a very short period of time but it is my intention to move from the prototype stage to a finished product.
-        </h2>
+        </div>
     </div>
     <br />
 </header>
