--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -709,6 +709,28 @@ a.navbar-brand {
     filter: blur(0px);
 }
 
+.pop-wrap iframe.popup {
+    display: block;
+    position: fixed;
+    filter: blur(5px);
+    left: 0px;
+    bottom: 0px;
+    opacity: 0; /* hide initially */
+    transition: all 600ms ease;
+    transition-delay: 0ms;
+    height: 0%;
+}
+
+.pop-wrap:hover > iframe.popup {
+    height: 100%;
+    opacity: 1;
+    transition-delay: 0s;
+    left: 10px;
+    bottom: 55px;
+    transition: all 600ms ease;
+    filter: blur(0px);
+}
+
 a img {
     /*filter: invert(100%);*/
     filter: brightness(70%);
